Modified to worked with custom lombok.

--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
     <version>9</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.projectlombok</groupId>
+  <groupId>custom</groupId>
   <artifactId>lombok-maven</artifactId>
   <packaging>pom</packaging>
-  <version>1.16.2.1-SNAPSHOT</version>
+  <version>1.16.3</version>
   <name>Maven Plugin for Project Lombok</name>
   <url>https://awhitford.github.com/lombok.maven/</url>
   <inceptionYear>2010</inceptionYear>
@@ -28,7 +28,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.api.version>3.0.4</maven.api.version>
-    <lombok.version>1.16.2</lombok.version>
+    <lombok.version>1.16.3</lombok.version>
   </properties>
   <modules>
     <module>lombok-maven-plugin</module>
